--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,13 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # State Management
+  hooks_riverpod: ^2.5.2
+  flutter_hooks: ^0.20.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
