--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,11 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
   cloud_firestore: ^5.4.3
+  firebase_storage: ^12.3.2
+
+  #Image Picker
+  image_picker: ^1.1.2
+  mime: ^2.0.0
 
 dev_dependencies:
   flutter_test:
