--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   mime: ^1.0.6
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.14.1
+  
   flutter_test:
     sdk: flutter
 
@@ -33,3 +35,8 @@ flutter:
 
   assets:
     - assets/images/
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
