--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -47,9 +47,18 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
-            shrinkResources false
+            minifyEnabled true
+            shrinkResources true
             signingConfig = signingConfigs.debug
+        }
+    }
+
+     splits {
+        abi {
+            enable true              
+            reset()                 
+            include 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+            universalApk false  
         }
     }
 }
